--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "pretest": "NODE_ENV=test && npx sequelize-cli db:drop && NODE_ENV=test&&npx sequelize-cli db:create",
     "test": "NODE_ENV=test && jest --detectOpenHandles",
     "prepare": "husky install",
-    "start-dev": "nodemon -e js,ejs",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon -e js,ejs"
   },
   "lint-staged": {
     "*.js": [
