--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pretest": "NODE_ENV=test && npx sequelize-cli db:drop && NODE_ENV=test&&npx sequelize-cli db:create",
-    "test": "NODE_ENV=test && jest --detectOpenHandles",
+    "pretest": "set NODE_ENV=test&&npx sequelize-cli db:drop&&set NODE_ENV=test&&npx sequelize-cli db:create",
+    "test": "set NODE_ENV=test && jest --detectOpenHandles",
     "prepare": "husky install",
     "start": "node index.js",
     "dev": "nodemon -e js,ejs"
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "^8.24.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "jest": "^29.1.1",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
